# DotaHelperAgent

./: .gitignore  README.md  match_8893253595.json  test_hero_format.py  test_hero_id.py  test_hero_recommendation.py  test_match.py  test_match_data.py  test_parse_heroes.py
DotaHelperAgent/post_match_review/: __init__.py  api.py  conftest.py  pyproject.toml  review_config.yaml  test_phase2.py  test_report_8893253595.md  test_report_8904322271.md  test_report_8905359313.md  test_report_llm_8905359313.md
DotaHelperAgent/post_match_review/analyzers/: __init__.py  base.py  decision_analyzer.py  economy_analyzer.py  fallback_analyzer.py  laning_analyzer.py  teamfight_analyzer.py  vision_analyzer.py
DotaHelperAgent/post_match_review/data_source/: __init__.py  cache.py  data_validator.py  exceptions.py  match_fetcher.py  opendota_client.py
DotaHelperAgent/post_match_review/domain_types/: __init__.py  analysis.py  enums.py  events.py  match_data.py  report.py  state.py
DotaHelperAgent/post_match_review/engines/: budget.py  compressor.py  prompt_builder.py  stop_verifier.py
DotaHelperAgent/post_match_review/facade/: __init__.py  api.py  entrypoint.py
DotaHelperAgent/post_match_review/interfaces/: __init__.py  analyzer.py  budget.py  compressor.py  data_source.py  llm.py  memory.py  report.py  skill.py  strategy.py  verifier.py
DotaHelperAgent/post_match_review/llm/: __init__.py  client.py  token_counter.py
DotaHelperAgent/post_match_review/memory/: __init__.py  dream_recap.py  four_layer_memory.py  persistent_notes.py  session_archive.py  skill_store.py
(+347 files in other folders)
