[project]
name = "post_match_review"
version = "0.1.0"
description = "Dota 2 赛后复盘 Agent 模块"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx>=0.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["post_match_review"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
